--- a/index.html
+++ b/index.html
@@ -102,6 +102,32 @@
 
             </div>
         </div>
+        <div class="page2">
+            <div class="page2-left">
+                <h4>Exclusive insights into<br>UI/UX and product design</h4>
+                <p>Being a design studio at the forefront of digital transformation and product design, we take it upon
+                    ourselves to drop some knowledge, share insights, let out insider tips, and put our work on full
+                    display</p>
+            </div>
+            <div class="page2-right">
+                <div class="right-elem">
+                    <h2>Effective Design Principles For Cryptocurrency Trading Interfaces</h2>
+                    <img src="images/image-1.jpg" loading="lazy" alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>How To Design An AI Interface users will trust in 2024?</h2>
+                    <img src="images/image-2.jpg" loading="lazy" alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>how ai influences design and the reciprocal impact of UX on ai-driven products</h2>
+                    <img src="images/image-3.jpg" loading="lazy" alt="">
+                </div>
+                <div class="right-elem">
+                    <h2>lazarev becomes a professional webflow partner</h2>
+                    <img src="images/image-4.jpg" loading="lazy" alt="">
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
         integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
