--- a/index.html
+++ b/index.html
@@ -112,19 +112,19 @@
             <div class="page2-right">
                 <div class="right-elem">
                     <h2>Effective Design Principles For Cryptocurrency Trading Interfaces</h2>
-                    <img src="images/image-1.jpg" loading="lazy" alt="">
+                    <img src="images/image-1.jpg" alt="">
                 </div>
                 <div class="right-elem">
                     <h2>How To Design An AI Interface users will trust in 2024?</h2>
-                    <img src="images/image-2.jpg" loading="lazy" alt="">
+                    <img src="images/image-2.jpg" alt="">
                 </div>
                 <div class="right-elem">
                     <h2>how ai influences design and the reciprocal impact of UX on ai-driven products</h2>
-                    <img src="images/image-3.jpg" loading="lazy" alt="">
+                    <img src="images/image-3.jpg" alt="">
                 </div>
                 <div class="right-elem">
                     <h2>lazarev becomes a professional webflow partner</h2>
-                    <img src="images/image-4.jpg" loading="lazy" alt="">
+                    <img src="images/image-4.jpg" alt="">
                 </div>
             </div>
         </div>
